--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.navbar-nav{
+.navbar-nav li a{
     color: white !important;
 }
 
@@ -9,6 +9,9 @@ margin: 10px;
 height: 600px;
 width: 400px;
 border-radius: 10px;
+transition: 1.5s;
+box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
+
 }
 .first-page img {
     height: 400px;
@@ -19,4 +22,23 @@ border-radius: 10px;
 ul.navbar-nav {
     gap: 280px;
     margin-left: 143px;
+}
+.first-page:hover{
+transition: 1.5s;
+transform: scale(0.9);
+}
+
+
+
+@media screen and (max-width: 600px){
+    .first-page {
+        height: auto;
+        width: 326px;
+        margin: 0px;
+    }
+    .first-page img {
+        height: 400px;
+        width: 380px !important;
+        border-radius: 40px;
+    }
 }
